<resources>
    <string name="app_name">LunaPlanner</string>

    <!--Main Activity-->
    <string name="Btn_Login">Login</string>
    <string name="Btn_Registro">Registro</string>

    <!--Actividad registro-->
    <string name="CrearCuentaTXT">Crear una Cuenta</string>
    <string name="NombreEt">Nombre(S)</string>
    <string name="CorreoEt">Correo Electronico</string>
    <string name="Contrasena">Contraseña</string>
    <string name="ConfirmarContreasenaEt">Confirmar contraseña</string>
    <string name="RegistrarUsuario">Registrar</string>
    <string name="TengounaCuentaTXT">Tengo una Cuenta</string>

    <!--Actividad Login-->
    <string name="IniciarSesionTXT">Iniciar Sesion</string>
    <string name="CorreoLogin">Correo</string>
    <string name="PassLogin">Contraseña</string>
    <string name="Btn_Logeo">Ingresar</string>
    <string name="UsuarioNuevoTxt">No tienes Una cuenta?. Registrate</string>

    <!--MENÚ PRINCIPAL-->
    <string name="BienvenidoPrincipal">Bienvenido(a)</string>
    <string name="UidPrincipal"> -- </string>
    <string name="NombresPrincipal"> -- </string>
    <string name="CorreoPrincipal"> -- </string>
    <string name="EstadoCuentaPrincipal">No verificado</string>

    <string name="AgregarNotas">Agregar</string>
    <string name="ListarNotas">Mis Notas</string>
    <string name="Importantes">Importantes</string>
    <string name="Contactos">Contactos</string>
    <string name="AcercaDe">Acerca De</string>
    <string name="CerrarSesion">Salir</string>

    <!---AGREGAR NOTA-->
    <string name="Uid_Usuario"> Uid del usuario</string>
    <string name="Correo_usuario">Correo de usuario</string>
    <string name="Fecha_hora_actual_TXT">Fecha de Registro</string>
    <string name="Fecha_hora_actual">Fecha y hora actual</string>
    <string name="Titulo"> Título </string>
    <string name="Descripcion"> Descripcion</string>
    <string name="Btn_Calendario">Calendario</string>
    <string name="Fecha"> 00/00/0000 </string>
    <string name="Estado"> No finalizado</string>

    <!--Menu-->
    <string name="Agregar_Nota_BD">Agregar</string>
    <string name="Actualizar_Nota_BD">Actualizar</string>
    <string name="Vaciar_Todas_Las_Notas">Vaciar todas las notas</string>
    <string name="Perfil_usuario">Perfil de Usuario</string>
    <string name="Actualizar_pass">Actualizar pass</string>


    <!--Item Nota-->
    <string name="Id_nota_Item">Id nota</string>
    <string name="Uid_usuario_Item">Uid del usuario</string>
    <string name="Correo_usuario_Item">Correo de usuario</string>
    <string name="Fecha_hora_registro_Item">Fecha y hora registro</string>
    <string name="Titulo_Item"> Título </string>
    <string name="Descripcion_Item"> Descripcion</string>
    <string name="Fecha_Item"> 00/00/0000 </string>
    <string name="Estado_Item"> No finalizado</string>


    <!--ITEM NOTA IMPORTANTE-->
    <string name="Id_nota_Item_I">Id nota</string>
    <string name="Uid_Usuario_Item_I"> Uid del usuario</string>
    <string name="Correo_usuario_Item_I">Correo de usuario</string>
    <string name="Fecha_hora_registro_Item_I">Fecha y hora registro</string>
    <string name="Titulo_Item_I"> Título </string>
    <string name="Descripcion_Item_I"> Descripcion</string>
    <string name="Fecha_Item_I"> 00/00/0000 </string>
    <string name="Estado_Item_I"> No finalizado</string>

    <!--ITEM Contacto-->
    <string name="Id_c_Item">Id Contacto</string>
    <string name="Uid_c_Item">Uid usuario</string>
    <string name="nombres_c_Item">Nombres</string>
    <string name="apellidos_c_Item">Apellidos</string>
    <string name="correo_c_Item">Correo</string>
    <string name="telefono_c_Item">Telefono</string>
    <string name="edad_c_Item">Edad</string>
    <string name="direccion_c_Item">Direccion</string>

    <!--Cuadro de dialogo opciones-->
    <string name="ElijaOpcionTXT">Elija una opcion</string>
    <string name="CD_Eliminar">Eliminar</string>
    <string name="CD_Actualizar">Actualizar</string>

    <!--Cuadro de dialogo - Cuenta Verificada-->
    <string name="CuentaVerificadaTXT">Cuenta Verificada</string>
    <string name="EntendidoVerificado">Entendio</string>


    <!--CUADRO DE DIÁLOGO - ESTABLECER TELÉFONO-->
    <string name="Establecer_Telefono">Escriba su teléfono</string>
    <string name="Btn_Aceptar_Telefono">Aceptar</string>

    <!--CUADRO DE DIÁLOGO - ESTABLECER TELÉFONO-->
    <string name="ElegirImagenTXT">Escriba imagen de:</string>
    <string name="Btn_Elegir_Galeria">Galeria</string>
    <string name="Btn_Elegir_Camara">Camara</string>


    <!--CUADRO DE DIÁLOGO - ELIMINAR NOTA IMPORTANTE-->
    <string name="EliminarNotaImportanteTXT">¿Desea eliminar ésta nota importante de la lista?</string>
    <string name="EliminarNota">Eliminar</string>
    <string name="EliminarNotaCancelar">Cancelar</string>

    <!--Actualizar Nota-->
    <string name="Id_nota_A">Id nota</string>
    <string name="Uid_Usuario_A"> Uid del usuario</string>
    <string name="Correo_usuario_A">Correo de usuario</string>
    <string name="Fecha_registro_A">Fecha y hora actual</string>
    <string name="Titulo_A"> Título </string>
    <string name="Descripcion_A"> Descripcion</string>
    <string name="Btn_Calendario_A">Calendario</string>
    <string name="Fecha_A"> 00/00/0000 </string>
    <string name="Estado_A"> No finalizado</string>
    <string name="Estado_nuevo"> -- </string>

    <!--Spinner - Estado-->
    <string-array name="Estados_nota">
        <item>"No Finalizado"</item>
        <item>"Finalizado"</item>
    </string-array>

    <!--Detalle Nota-->
    <string name="Id_nota_Detalle_TXT">Id de la nota: </string>
    <string name="Id_nota_Detalle">Id nota</string>
    <string name="Uid_Usuario_Detalle_TXT"> Uid de usuario</string>
    <string name="Uid_Usuario_Detalle"> Uid usuario</string>
    <string name="Correo_usuario_Detalle_TXT">Correo de usuario: </string>
    <string name="Correo_usuario_Detalle">Correo de usuario</string>
    <string name="Titulo_Detalle_TXT"> Título: </string>
    <string name="Titulo_Detalle"> Título </string>
    <string name="Descripcion_Detalle_TXT"> Descripcion: </string>
    <string name="Descripcion_Detalle"> Descripcion</string>
    <string name="Fecha_Registro_Detalle_TXT"> Fecha de registro: </string>
    <string name="Fecha_Registro_Detalle"> Fecha Registro </string>
    <string name="Fecha_Nota_Detalle_TXT"> Fecha nota: </string>
    <string name="Fecha_Nota_Detalle"> Fecha nota </string>
    <string name="Estado_Detalle_TXT"> Estado de la nota:  </string>
    <string name="Estado_Detalle"> Estado </string>

    <string name="Boton_Importante">Importante</string>


    <!--Perfil del usuario-->
    <string name="Uid_Perfil">Uid</string>
    <string name="Nombres_Perfil">Mis nombres</string>
    <string name="Apellidos_Perfil">Mis apellidos</string>
    <string name="Correo_Perfil">Correo</string>
    <string name="Edad_Perfil">Edad</string>
    <string name="Telefono_Perfil">Teléfono</string>
    <string name="Domicilio_Perfil">Domicilio</string>
    <string name="Universidad_Perfil">Universidad</string>
    <string name="Profesion_Perfil">Profesión</string>
    <string name="Fecha_Nacimiento_Perfil">Fecha de nac.</string>
    <string name="Guardar_Datos">Guardar datos</string>

    <!--Perfil del usuario [imagen de perfil]-->
    <string name="BtnElegirImagenDe">Elegir imagen de</string>
    <string name="BtnActualizarImagen">Actualizar imagen</string>

    <!--Cambiar password-->
    <string name="ActualizarPassTXT">Contraseña actual:</string>
    <string name="ActualPass"> --</string>
    <string name="EtActualPass">Contraseña actual</string>
    <string name="EtNuevoPass">Nueva Contraseña</string>
    <string name="EtRNuevoPass">Repetir nueva contraseña</string>
    <string name="BtnActualizarPass">Actualizar</string>


    <!--Informacion de aplicacion-->
    <string name="Desarrollador">Desarrollado por: Sutmi Samai Ramirez Ramirez y Diego Enrique Marquez Lugo</string>
    <string name="CorreoSoporte">Soporte: Sut.dst@gmail.com</string>
    <string name="Version">Version: 0.1</string>
    <string name="EntendidoInfo">Entendido</string>



</resources>