<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActualizarPass.ActualizarPassUsuario">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/password"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <TextView
                android:text="@string/ActualizarPassTXT"
                android:textSize="18sp"
                android:fontFamily="@font/handfond"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/ActualPass"
                android:text="@string/ActualPass"
                android:textSize="18sp"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/handfond"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--Actual Contraseña-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/EtActualPass"
                android:hint="@string/EtActualPass"
                android:inputType="textPassword"
                android:fontFamily="@font/handfond"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--Nueva Contraseña-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/EtNuevoPass"
                android:hint="@string/EtNuevoPass"
                android:inputType="textPassword"
                android:fontFamily="@font/handfond"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Confirmar Contraseña-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/EtRNuevoPass"
                android:hint="@string/EtRNuevoPass"
                android:inputType="textPassword"
                android:fontFamily="@font/handfond"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:background="#00897b"
            android:id="@+id/BtnActualizarPass"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/BtnActualizarPass"
            android:fontFamily="@font/handfond"
            android:drawableLeft="@drawable/icono_actualizar_pass"
            android:padding="10dp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>