<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Detalle.Detalle_Nota">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--Datos de la nota-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <!--Icono - TXT - ID Nota-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!--Icono-->
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:src="@drawable/id_nota_detalle"/>

                <!--TXT-->
                <TextView
                    android:text="@string/Id_nota_Detalle_TXT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/handfond"
                    android:textSize="20sp"
                    android:layout_marginStart="10dp"/>

            </androidx.appcompat.widget.LinearLayoutCompat>
            <!--Dato - ID Nota-->
            <TextView
                android:id="@+id/Id_nota_Detalle"
                android:text="@string/Id_nota_Detalle"
                android:fontFamily="@font/handfond"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


            <!--Icono - TXT- Uid Usuario -->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <!--Icono-->
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:src="@drawable/uid_usuario_detalle"/>

                <!--TXT-->
                <TextView
                    android:text="@string/Uid_Usuario_Detalle_TXT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/handfond"
                    android:textSize="20sp"
                    android:layout_marginStart="10dp"/>

            </androidx.appcompat.widget.LinearLayoutCompat>
            <!--Dato- Uid Usuario -->
            <TextView
                android:id="@+id/Uid_Usuario_Detalle"
                android:text="@string/Uid_Usuario_Detalle"
                android:fontFamily="@font/handfond"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


            <!--Icono - TXT - Correo_usuario-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <!--Icono-->
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:src="@drawable/correo_usuario_detalle"/>

                <!--TXT-->
                <TextView
                    android:text="@string/Correo_usuario_Detalle_TXT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/handfond"
                    android:textSize="20sp"
                    android:layout_marginStart="10dp"/>

            </androidx.appcompat.widget.LinearLayoutCompat>
            <!--Dato- Correo_Usuario -->
            <TextView
                android:id="@+id/Correo_usuario_Detalle"
                android:text="@string/Correo_usuario_Detalle"
                android:fontFamily="@font/handfond"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


            <!--Icono - TXT- Titulo-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <!--Icono-->
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:src="@drawable/titulo_nota_detalle"/>

                <!--TXT-->
                <TextView
                    android:text="@string/Titulo_Detalle_TXT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/handfond"
                    android:textSize="20sp"
                    android:layout_marginStart="10dp"/>

            </androidx.appcompat.widget.LinearLayoutCompat>
            <!--Dato- Titulo -->
            <TextView
                android:id="@+id/Titulo_Detalle"
                android:text="@string/Titulo_Detalle"
                android:fontFamily="@font/handfond"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


            <!--Icono - TXT- Descripcion-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <!--Icono-->
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:src="@drawable/descripcion_nota_detalle"/>

                <!--TXT-->
                <TextView
                    android:text="@string/Descripcion_Detalle_TXT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/handfond"
                    android:textSize="20sp"
                    android:layout_marginStart="10dp"/>

            </androidx.appcompat.widget.LinearLayoutCompat>
            <!--Dato- Descripcion-->
            <TextView
                android:id="@+id/Descripcion_Detalle"
                android:text="@string/Descripcion_Detalle"
                android:fontFamily="@font/handfond"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="100dp"/>


            <!--Icono - TXT- Fecha_Registro-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <!--Icono-->
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:src="@drawable/fecha_registro_nota_detalle"/>

                <!--TXT-->
                <TextView
                    android:text="@string/Fecha_Registro_Detalle_TXT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/handfond"
                    android:textSize="20sp"
                    android:layout_marginStart="10dp"/>

            </androidx.appcompat.widget.LinearLayoutCompat>
            <!--Dato- Fecha_Registro-->
            <TextView
                android:id="@+id/Fecha_Registro_Detalle"
                android:text="@string/Fecha_Registro_Detalle"
                android:fontFamily="@font/handfond"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


            <!--Icono - TXT- Fecha nota-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <!--Icono-->
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:src="@drawable/fecha_nota_detalle"/>

                <!--TXT-->
                <TextView
                    android:text="@string/Fecha_Nota_Detalle_TXT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/handfond"
                    android:textSize="20sp"
                    android:layout_marginStart="10dp"/>

            </androidx.appcompat.widget.LinearLayoutCompat>
            <!--Dato- Fecha nota-->
            <TextView
                android:id="@+id/Fecha_Nota_Detalle"
                android:text="@string/Fecha_Nota_Detalle"
                android:fontFamily="@font/handfond"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


            <!--Icono - TXT- Estado-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <!--Icono-->
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:src="@drawable/estado_detalle"/>

                <!--TXT-->
                <TextView
                    android:text="@string/Estado_Detalle_TXT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/handfond"
                    android:textSize="20sp"
                    android:layout_marginStart="10dp"/>

            </androidx.appcompat.widget.LinearLayoutCompat>
            <!--Dato- Estado-->
            <TextView
                android:id="@+id/Estado_Detalle"
                android:text="@string/Estado_Detalle"
                android:fontFamily="@font/handfond"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--Boton Importante-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:background="#34495E">

            <Button
                android:id="@+id/Boton_Importante"
                android:text="@string/Boton_Importante"
                android:background="@android:color/transparent"
                android:fontFamily="@font/handfond"
                android:drawableTop="@drawable/icono_nota_no_importante"
                android:textColor="#fff"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>


</ScrollView>